--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_DETAILS="mongodb+srv://marc:marc@minilinkcluster.ja0tk.azure.mongodb.net/test"
+MONGO_DETAILS="mongodb+srv://new-user_31:l7DeN0T4HlflrHyc@cluster0.fgdvk.mongodb.net/shorten?retryWrites=true&w=majority"
