--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-MONGO_DETAILS="mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false"
-#"mongodb+srv://new-user_31:l7DeN0T4HlflrHyc@cluster0.fgdvk.mongodb.net/shorten?retryWrites=true&w=majority"
+MONGO_DETAILS="mongodb+srv://new-user_31:l7DeN0T4HlflrHyc@cluster0.fgdvk.mongodb.net/shorten?retryWrites=true&w=majority"
 
 KEY_PATH="keys.json"
