--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_DETAILS="mongodb+srv://new-user_31:l7DeN0T4HlflrHyc@cluster0.fgdvk.mongodb.net/shorten?retryWrites=true&w=majority"
+MONGO_DETAILS="mongodb+srv://marc:marc@minilinkcluster.ja0tk.azure.mongodb.net/test"
 
 KEY_PATH="keys.json"
